--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -14,15 +14,11 @@
 
 
 <ion-content padding>
-<<<<<<< HEAD
   <ion-list>
     <ion-item *ngFor="let transaction of transactions">
-      <h2>My Neighbor Totoro</h2>
+      <h2>{{transaction.country.name}}</h2>
       <p>Hayao Miyazaki • 1988</p>
       <button ion-button clear item-end>View</button>
     </ion-item>
   </ion-list>
-=======
-
->>>>>>> 3189ca2b777b789f6f29af1862d9597644099d61
 </ion-content>
