Lunes en la mañana

--- a/src/pages/politicas/politicas.html
+++ b/src/pages/politicas/politicas.html
@@ -446,7 +446,7 @@
       <a (click)="camPolitica()" style="font-weight: bold">CAMBIOS A ESTA POLÍTICA.</a>
       <br><br> -->
       <div class="center">
-        <button style="border-radius: 0%" (click)= "navHome()" class="buttonPayCash btnStyle" ion-button small>Acepto</button>
+        <button style="border-radius: 0%" (click)= "aceptarTerminos()" class="buttonPayCash btnStyle" ion-button small>Acepto</button>
       </div>
     </div>
   </div>
