--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -44,12 +44,15 @@
     </ion-list>
   </div>
 
-  <div style="margin-top: -20%" padding class="center">
-    <ion-label (click)="politicas()" style="color:white; font-size: 16px" floating>Políticas de uso</ion-label>
-    <ion-label (click)="privacidad()" style="color:white; font-size: 16px" floating>Privacidad de la información
-    </ion-label>
-  </div>
+  <ion-list>
 
+      <ion-col col-2>
+        <!--<ion-checkbox (ionChange)="aceptarTerminos()"></ion-checkbox>-->
+        <ion-checkbox [(ngModel)]="ischecked"></ion-checkbox>
+      </ion-col>
+      <ion-col col-10><span (click)="politicas()"> Leí y acepto las políticas de uso  y privacidad de la información</span></ion-col>
+
+  </ion-list>
   <div style="margin-top: 6%" class="center">
     <button style="border-radius: 0%" class="buttonPayCash" (click)="cancel()" ion-button small>Cancelar</button>
     <button style="border-radius: 0%" class="buttonPayCash" (click)="register()" ion-button small>Registrarse
