--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -21,7 +21,7 @@
           <h4>{{transaction.country.name}}</h4>
         </ion-col>
         <ion-col col-6>
-          {{transaction.date_request | date : format : timezone}}
+          {{transaction.date_request |date:'MM/dd/yyyy h:mma'}}
         </ion-col>
       </ion-row>
       <ion-row>
