--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -15,16 +15,15 @@
 
 <ion-content padding>
   <ion-list>
-    <ion-item *ngFor="let transaction of transactions">
+    <button *ngFor="let transaction of transactions" (click)="goDetalle(transaction)">
       <ion-row>
         <ion-col col-6>
-          <h4>{{transaction.country.name}}</h4>
+          <h6>{{transaction.country.name}}</h6>
         </ion-col>
         <ion-col col-6>
-          {{transaction.date_request |date:'MM/dd/yyyy h:mma'}}
+          {{transaction.date_request |date:'MM/dd/yyyy'}}
+          <!--transaction.date_request |date:'MM/dd/yyyy h:mma'}}-->
         </ion-col>
-      </ion-row>
-      <ion-row>
         <ion-col col-6>
           {{transaction.coin.full_name}}
         </ion-col>
@@ -33,6 +32,6 @@
         </ion-col>
       </ion-row>
       <!--<button ion-button clear item-end>Ver</button>-->
-    </ion-item>
+    </button>
   </ion-list>
 </ion-content>
