--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -1,37 +1,39 @@
-<!--
-  Generated template for the HistoryPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>history</ion-title>
+    <ion-title>Historial</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
-  <ion-list>
+<ion-content padding >
+  <ion-list class="center bground">
+
     <button *ngFor="let transaction of transactions" (click)="goDetalle(transaction)">
-      <ion-row>
-        <ion-col col-6>
-          <h6>{{transaction.country.name}}</h6>
-        </ion-col>
-        <ion-col col-6>
-          {{transaction.date_request |date:'MM/dd/yyyy'}}
-          <!--transaction.date_request |date:'MM/dd/yyyy h:mma'}}-->
-        </ion-col>
-        <ion-col col-6>
-          {{transaction.coin.full_name}}
-        </ion-col>
-        <ion-col col-6>
-          {{transaction.amount_local | currency:transaction.country.currency+" " : 2}}
-        </ion-col>
-      </ion-row>
-      <!--<button ion-button clear item-end>Ver</button>-->
+      <ion-card>
+        <ion-card-content>
+          <ion-row>
+            <ion-col col-6>
+              <h6>{{transaction.country.name}}</h6>
+            </ion-col>
+            <ion-col col-6>
+              {{transaction.date_request |date:'MM/dd/yyyy'}}
+              <!--transaction.date_request |date:'MM/dd/yyyy h:mma'}}-->
+            </ion-col>
+            <ion-col col-4>
+              {{transaction.coin.full_name}}
+            </ion-col>
+            <ion-col col-4>
+              {{transaction.amount_local | currency:transaction.country.currency+" " : 2}}
+            </ion-col>
+            <ion-col col-4 >
+              <ion-icon name="add"></ion-icon>
+            </ion-col>
+          </ion-row>
+        </ion-card-content>
+      </ion-card>
     </button>
+
   </ion-list>
 </ion-content>
