--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -15,23 +15,24 @@
 
 <ion-content padding>
   <ion-list>
-    <button *ngFor="let transaction of transactions" (click)="goDetalle(transaction)">
-      <ion-row>
-        <ion-col col-6>
-          <h6>{{transaction.country.name}}</h6>
-        </ion-col>
-        <ion-col col-6>
-          {{transaction.date_request |date:'MM/dd/yyyy'}}
-          <!--transaction.date_request |date:'MM/dd/yyyy h:mma'}}-->
-        </ion-col>
-        <ion-col col-6>
-          {{transaction.coin.full_name}}
-        </ion-col>
-        <ion-col col-6>
-          {{transaction.amount_local | currency:transaction.country.currency+" " : 2}}
-        </ion-col>
-      </ion-row>
-      <!--<button ion-button clear item-end>Ver</button>-->
-    </button>
+    <ion-card *ngFor="let transaction of transactions" (click)="goDetalle(transaction)">
+      <ion-card-content>
+        <ion-row>
+          <ion-col col-6>
+            {{transaction.country.name}}
+          </ion-col>
+          <ion-col col-6>
+            {{transaction.date_request |date:'MM/dd/yyyy'}}
+            <!--transaction.date_request |date:'MM/dd/yyyy h:mma'}}-->
+          </ion-col>
+          <ion-col col-6>
+            {{transaction.coin.full_name}}
+          </ion-col>
+          <ion-col col-6>
+            {{transaction.amount_local | currency:transaction.country.currency+" " : 2}}
+          </ion-col>
+        </ion-row>
+      </ion-card-content>
+    </ion-card>
   </ion-list>
 </ion-content>
