--- a/src/pages/transaction/transaction.html
+++ b/src/pages/transaction/transaction.html
@@ -9,8 +9,6 @@
   <ion-select [(ngModel)]="currency" (ionChange)="countrySelected()">
     <ion-option *ngFor="let pais of countrys" value="{{pais.currency}}">{{pais.name}}</ion-option>
   </ion-select>
-
-
   <ion-card>
     <ion-card-content>
       <label stacked>Precio del dolar en el paìs</label>
@@ -18,22 +16,21 @@
         <h6>1 USD = {{infoCountry?.local_usd_value}} {{currency}}</h6>
       </ion-item>
       <label stacked>Información de las monedas</label>
-
-      <button ion-item *ngFor="let moneda of monedas" (click)="monedaSelect(moneda)">
-        <ion-row>
-          <ion-col col-10>
-            <h4>Nombre: {{moneda.full_name}}</h4>
-            <h6>1 {{moneda.full_name}} = {{moneda.usd_value}} USD</h6>
-            <h5 stacked> 1 {{moneda.full_name}} >> {{currency}} </h5>
-            <h5>{{moneda.local_usd_value}}</h5>
-          </ion-col>
-          <ion-col col-2 class="margIcon">
-            <ion-icon  name="add"></ion-icon>
-          </ion-col>
-        </ion-row>
-        <hr>
-      </button>
-
+      <ion-card ion-item *ngFor="let moneda of monedas" (click)="monedaSelect(moneda)">
+        <ion-card-content>
+          <ion-row>
+            <ion-col col-10>
+              <h4>Nombre: {{moneda.full_name}}</h4>
+              <h6>1 {{moneda.full_name}} = {{moneda.usd_value}} USD</h6>
+              <h5 stacked> 1 {{moneda.full_name}} >> {{currency}} </h5>
+              <h5>{{moneda.local_usd_value}}</h5>
+            </ion-col>
+            <ion-col col-2 class="margIcon">
+              <ion-icon name="add"></ion-icon>
+            </ion-col>
+          </ion-row>
+        </ion-card-content>
+      </ion-card>
     </ion-card-content>
   </ion-card>
 </ion-content>
