Design vers Detail hISTORY

--- a/src/pages/transaction/transaction.html
+++ b/src/pages/transaction/transaction.html
@@ -11,7 +11,7 @@
   </ion-select>
       <label stacked>Precio del dolar en el paìs</label>
       <ion-item>
-        <h6>1 USD = {{infoCountry?.local_usd_value}} {{currency}}</h6>
+        <h6 class="txtboldblack">1 USD = {{infoCountry?.local_usd_value}} {{currency}}</h6>
       </ion-item>
       <label stacked>Información de las monedas</label>
       <ion-card ion-item *ngFor="let moneda of monedas" (click)="monedaSelect(moneda)">
