--- a/src/pages/recovery-password/recovery-password.html
+++ b/src/pages/recovery-password/recovery-password.html
@@ -11,7 +11,7 @@
       <ion-label stacked>Ingrese código de verificación</ion-label>
       <ion-input type="text" [(ngModel)]="codigo" name="usercodigo"></ion-input>
     </ion-item>
-    <ion-row>
+    <ion-row class="divMargin">
       <ion-col col-12 *ngIf="!iscodigo">
         <button ion-button (click)="sendMessage()" block class="buttonPayCash">Enviar mensaje</button>
       </ion-col>
@@ -19,7 +19,7 @@
         <button ion-button (click)="confirmCode()" block class="buttonPayCash">Confirmar código</button>
       </ion-col>
     </ion-row>
-    <ion-row class="marginLft">
+    <ion-row class="marginLft divMargin20">
       <ion-col col-4>
         <button ion-button (click)="cancelar()" class="buttonPayCash">Cancelar</button>
       </ion-col>
@@ -40,7 +40,7 @@
       <ion-label stacked>Ingrese código de verificación</ion-label>
       <ion-input type="text" [(ngModel)]="codigo" name="usercodigo"></ion-input>
     </ion-item>
-    <ion-row>
+    <ion-row class="divMargin">
       <ion-col col-12 *ngIf="!iscodigo">
         <button ion-button (click)="sendMail()" block class="buttonPayCash">Enviar email</button>
       </ion-col>
@@ -48,7 +48,7 @@
         <button ion-button (click)="confirmCode()" block class="buttonPayCash">Confirmar código</button>
       </ion-col>
     </ion-row>
-    <ion-row class="marginLft">
+    <ion-row class="marginLft divMargin">
       <ion-col col-4>
         <button ion-button (click)="cancelar()" class="buttonPayCash">Cancelar</button>
       </ion-col>
