martes lazy loading

--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -6,6 +6,11 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding>
+  <ion-row>
+    <ion-col col-12>
+      <button ion-button (click)="cerrarSesion()" block>CERRAR SESIÓN</button>
+    </ion-col>
+  </ion-row>
   <ion-card>
     <ion-card-header>
       <ion-icon name="person" item-start></ion-icon>
