--- a/src/pages/transaction-resume/transaction-resume.html
+++ b/src/pages/transaction-resume/transaction-resume.html
@@ -8,22 +8,48 @@
   <h4>Resumen de la transacción</h4>
 <ion-card>
   <ion-card-content>
-    <ion-row>
-      <label stacked>Número de celular de destino</label>
-      <h4>{{transaction.phone_user_des}}</h4>
-      <label stacked>Nombre de la ciudad</label>
-      <h4>{{country.name}}</h4>
-      <label stacked>Costo local de la transacción</label>
-      <h4>{{transaction.amount_local}}</h4>
-      <label stacked>Nombre de la criptomoneda</label>
-      <h4>{{coin.full_name}}</h4>
-      <label stacked>Clave de transacción</label>
-      <h4>{{transaction.key_eyecash}}</h4>
-      <label stacked>Total en dolares</label>
-      <h4>{{transaction.amount_usd}}</h4>
-      <label stacked>Total en criptomoneda</label>
-      <h4>{{transaction.amount_btc}}</h4>
-    </ion-row>
+    <ion-list>
+      <label stacked>Información de la transacción:</label>
+      <ion-row>
+        <ion-col col-6 text-left>Nº Celular destino</ion-col>
+        <ion-col col-6 text-right>
+          {{transaction?.phone_user_des}}
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col col-6 text-left >Nombre Criptomoneda</ion-col>
+        <ion-col col-6 text-right > {{coin.full_name}} </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col col-6 text-left >Fecha transacción</ion-col>
+        <ion-col col-6 text-right >{{transaction?.date_request}} </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col col-6 text-left >Costo moneda local</ion-col>
+        <ion-col col-6 text-right > {{result.money_local_to_usd}} </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col col-6 text-left >Costo en USD</ion-col>
+        <ion-col col-6 text-right > {{transaction?.amount_usd}} </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col col-6 text-left >Costo en criptomoneda</ion-col>
+        <ion-col col-6 text-right > {{transaction?.amount_btc}} </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col col-6 text-left >Costo comisión</ion-col>
+        <ion-col col-6 text-right > {{result.commission.CRYPTO}} </ion-col>
+      </ion-row>
+      <ion-row text-center>
+        <ion-col col-12>
+          <h2>Dirección {{coin.full_name}} </h2>
+          <h2>{{coinhas.eye_hash}}</h2>
+        </ion-col>
+      </ion-row>
+      <ion-row text-center>
+        <img src="{{qrlink}}">
+      </ion-row>
+    </ion-list>
   </ion-card-content>
 </ion-card>
 
