--- a/src/pages/transaction/transaction.html
+++ b/src/pages/transaction/transaction.html
@@ -10,9 +10,9 @@
     <ion-option *ngFor="let pais of countrys" value="{{pais.currency}}">{{pais.name}}</ion-option>
   </ion-select>
       <label stacked>Precio del dolar en el paìs</label>
-      <ion-item>
+      <ion-col col-12>
         <h6>1 USD = {{infoCountry?.local_usd_value}} {{currency}}</h6>
-      </ion-item>
+      </ion-col>
       <label stacked>Información de las monedas</label>
       <ion-card ion-item *ngFor="let moneda of monedas" (click)="monedaSelect(moneda)">
         <ion-card-content>
