App full martes

--- a/src/pages/history/history.html
+++ b/src/pages/history/history.html
@@ -6,47 +6,17 @@
 
 </ion-header>
 <ion-content padding>
-
-<<<<<<< HEAD
   <ion-row>
-    <ion-col col-6>
-      <ion-select [(ngModel)]="filtro.status">
+    <ion-col col-12>
+      <ion-select [(ngModel)]="filtro.status" (ionChange)="getInfo()">
         <ion-option value="0">Estado pendiente</ion-option>
         <ion-option value="1">Estado por retirar</ion-option>
         <ion-option value="2">Estado terminadas</ion-option>
       </ion-select>
     </ion-col>
-    <ion-col col-6>
-      <button ion-button (click)="getInfo()">Buscar</button>
-    </ion-col>
   </ion-row>
-
-  <ion-list>
-    <ion-card *ngFor="let transaction of transactions" (click)="goDetalle(transaction)">
-      <ion-card-content>
-        <ion-row>
-          <ion-col col-6>
-            {{transaction.country.name}}
-          </ion-col>
-          <ion-col col-6>
-            {{transaction.date_request |date:'MM/dd/yyyy'}}
-            <!--transaction.date_request |date:'MM/dd/yyyy h:mma'}}-->
-          </ion-col>
-          <ion-col col-6>
-            {{transaction.coin.full_name}}
-          </ion-col>
-          <ion-col col-6>
-            {{transaction.amount_local | currency:transaction.country.currency+" " : 2}}
-          </ion-col>
-        </ion-row>
-      </ion-card-content>
-    </ion-card>
-=======
-<ion-content padding >
-  <ion-list class="center bground">
-
-    <button *ngFor="let transaction of transactions" (click)="goDetalle(transaction)">
-      <ion-card>
+    <ion-list>
+      <ion-card *ngFor="let transaction of transactions" (click)="goDetalle(transaction)" class="center bground">
         <ion-card-content>
           <ion-row>
             <ion-col col-6>
@@ -62,13 +32,11 @@
             <ion-col col-4>
               {{transaction.amount_local | currency:transaction.country.currency+" " : 2}}
             </ion-col>
-            <ion-col col-4 >
+            <ion-col col-4>
               <ion-icon name="add"></ion-icon>
             </ion-col>
           </ion-row>
         </ion-card-content>
       </ion-card>
-    </button>
->>>>>>> b54d1255eab5f07bbfba8f2a9bb7fa28a0147993
-  </ion-list>
-</ion-content>
+    </ion-list>
+  </ion-content>
