--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -8,7 +8,7 @@
 <ion-content padding>
   <ion-row>
     <ion-col col-12>
-      <button ion-button (click)="cerrarSesion()" block>CERRAR SESIÓN</button>
+      <button ion-button (click)="cerrarSesion()" block class="buttonPayCash">CERRAR SESIÓN</button>
     </ion-col>
   </ion-row>
   <ion-card>
