--- a/src/pages/transaction-resume/transaction-resume.html
+++ b/src/pages/transaction-resume/transaction-resume.html
@@ -5,11 +5,29 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding>
-  <h4>Resumen de la transacción</h4>
+
   <ion-card>
+    <ion-card-header>
+      <ion-icon name="checkmark-circle"></ion-icon>
+      <label>A continuación</label>
+    </ion-card-header>
+    <ion-card-content>
+      <ul>
+        <li>Transacción solicitada</li>
+        <li>1- Realizar pago (Dirección o Código QR) </li>
+        <li>2- Realizar el retiro del efectivo</li>
+        <button ion-button outline block (click)="goMaps()"> Ver mapa</button>
+      </ul>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+    <ion-card-header>
+      <ion-icon name="card"></ion-icon>
+      <label stacked>Información detallada:</label>
+    </ion-card-header>
     <ion-card-content>
       <ion-list>
-        <label stacked>Información de la transacción:</label>
         <ion-row>
           <ion-col col-6 text-left>Nº Celular destino</ion-col>
           <ion-col col-6 text-right>
@@ -30,11 +48,11 @@
         </ion-row>
         <ion-row>
           <ion-col col-6 text-left>Costo en USD</ion-col>
-          <ion-col col-6 text-right> {{transaction?.amount_usd}}</ion-col>
+          <ion-col col-6 text-right> {{transaction.amount_usd}}</ion-col>
         </ion-row>
         <ion-row>
           <ion-col col-6 text-left>Costo en criptomoneda</ion-col>
-          <ion-col col-6 text-right> {{transaction?.amount_btc}}</ion-col>
+          <ion-col col-6 text-right> {{transaction.amount_btc }}</ion-col>
         </ion-row>
         <ion-row>
           <ion-col col-6 text-left>Costo comisión</ion-col>
@@ -42,12 +60,15 @@
         </ion-row>
         <ion-row text-center>
           <ion-col col-12>
-            <h2>Dirección {{coin.full_name}} </h2>
+             Dirección de pago {{coin.full_name}}: <br>
             <h2>{{coinhas.eye_hash}}</h2>
           </ion-col>
         </ion-row>
         <ion-row text-center>
-          <img src="{{qrlink}}">
+          <ion-col col-12>
+            Código QR:
+            <img src="{{qrlink}}">
+          </ion-col>
         </ion-row>
       </ion-list>
     </ion-card-content>
