--- a/src/pages/modal-transaction/modal-transaction.html
+++ b/src/pages/modal-transaction/modal-transaction.html
@@ -12,8 +12,8 @@
       {{moneda.full_name}}
     </ion-card-header>
     <ion-card-content>
-      <h6>1 {{moneda.full_name}} == {{moneda.local_usd_value | number}} {{userCountry.currency}} </h6>
-      <h6>1 {{moneda.full_name}} == {{moneda.usd_value | number}} USD </h6>
+      <h6 *ngIf="currency != 'USD'">1 {{moneda.full_name}} ==  {{userCountry.local_usd_value| currency}} USD </h6>
+      <h6>1 {{moneda.full_name}} == {{moneda.usd_value | currency}} USD </h6>
     </ion-card-content>
   </ion-card>
   <ion-card>
