--- a/src/pages/transaction/transaction.html
+++ b/src/pages/transaction/transaction.html
@@ -9,12 +9,9 @@
   <ion-select [(ngModel)]="currency" (ionChange)="countrySelected()">
     <ion-option *ngFor="let pais of countrys" value="{{pais.currency}}">{{pais.name}}</ion-option>
   </ion-select>
-  <label stacked>Precio del dolar en el paìs</label>
-  <ion-col col-12>
-    <h6>1 USD = {{infoCountry?.local_usd_value}} {{currency}}</h6>
-  </ion-col>
-  <ion-item>
-    <h6 class="txtboldblack">1 USD = {{infoCountry?.local_usd_value}} {{currency}}</h6>
+  <label stacked *ngIf="currency != 'USD'">Precio del dolar en el paìs</label>
+  <ion-item *ngIf="currency != 'USD'">
+    <h6 class="txtboldblack">1 USD = {{infoCountry?.local_usd_value | currency}} {{currency}}</h6>
   </ion-item>
   <label stacked>Información de las monedas</label>
   <ion-card ion-item *ngFor="let moneda of monedas" (click)="monedaSelect(moneda)">
@@ -22,8 +19,8 @@
       <ion-row>
         <ion-col col-10>
           <h4>Nombre: {{moneda.full_name}}</h4>
-          <h6>1 {{moneda.full_name}} = {{moneda.usd_value}} USD</h6>
-          <h5 stacked> 1 {{moneda.full_name}} = {{moneda.local_usd_value}} {{currency}} </h5>
+          <h6 *ngIf="currency != 'USD'">1 {{moneda.full_name}} = {{moneda.usd_value | currency }} USD</h6>
+          <h5 stacked> 1 {{moneda.full_name}} = {{moneda.local_usd_value | currency }} {{currency}} </h5>
         </ion-col>
         <ion-col col-2 class="margIcon">
           <ion-icon name="add"></ion-icon>
