--- a/src/pages/transaction-resume/transaction-resume.html
+++ b/src/pages/transaction-resume/transaction-resume.html
@@ -16,8 +16,9 @@
         <li>Transacción solicitada</li>
         <li>1- Realizar pago (Dirección o Código QR) </li>
         <li>2- Realizar el retiro del efectivo</li>
-        <button ion-button outline block (click)="goMaps()"> Ver mapa</button>
+        
       </ul>
+      <button class="buttonPayCash" ion-button outline block (click)="goMaps()"> Ver mapa</button>
     </ion-card-content>
   </ion-card>
 
