--- a/src/pages/security/security.html
+++ b/src/pages/security/security.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Security</ion-title>
+    <ion-title>Seguridad</ion-title>
   </ion-navbar>
 
 </ion-header>
