--- a/src/pages/transaction-resume/transaction-resume.html
+++ b/src/pages/transaction-resume/transaction-resume.html
@@ -70,10 +70,10 @@
           <ion-col col-6 text-left>Fecha transacción</ion-col>
           <ion-col col-6 text-right>{{transaction?.date_request | date:'dd/MM/yyyy h:mma'}}</ion-col>
         </ion-row>
-        <ion-row>
-          <ion-col col-6 text-left>TRM: </ion-col>
-          <ion-col col-6 text-right> {{result.money_local_to_usd}} {{country.currency}}</ion-col>
-        </ion-row>
+        <!--<ion-row>-->
+          <!--<ion-col col-6 text-left>TRM: </ion-col>-->
+          <!--<ion-col col-6 text-right> {{result.money_local_to_usd}} {{country.currency}}</ion-col>-->
+        <!--</ion-row>-->
         <hr>
         <ion-row>
           <ion-col col-12 text-center>
